--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -8,6 +8,74 @@ html {
 }
 
 body {
+  height: 100%;
   margin: 0;
-  font: $base-text-size / 1 $base-font-family;
+  background-color: $purplenavy;
+  font-family: Raleway;
+}
+
+.App {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h1 {
+    font-family: Shrikhand;
+    color: #fff;
+    flex: 1;
+    font-size: 50px;
+
+    a {
+      text-decoration: none;
+      color: #fff;
+    }
+  }
+
+  main {
+    flex: 1;
+  }
+
+  .Navbar {
+    flex: 1;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    background-color: rgba(255,255,255,0.5);
+    position: absolute;
+    bottom: 0;
+    height: 50px;
+    align-items: center;
+
+    a {
+      color: $purplenavy;
+      text-decoration: none;
+    }
+  }
+
+  .Splash {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    span, img, button {
+      margin: 10px;
+    }
+
+    button {
+      border: none;
+      background-color: rgba(255,255,255,0.5);
+      border-radius: 5px;
+      width: 100px;
+      height: 20px;
+      box-shadow: 0 0 5px transparentize($topaz, 0.3);
+    }
+
+    img {
+      width: 200px;
+      border: 1px dashed #333;
+      border-radius: 100px;
+      box-shadow: 0 0 20px transparentize($mango, 0.5);
+    }
+  }
 }
