--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -10,9 +10,26 @@ html {
 body {
   height: 100%;
   margin: 0;
-  background-color: $purplenavy;
   font-family: Raleway;
+  min-height: 100vh;
+    background-image:
+      repeating-linear-gradient(90deg,
+        rgba(232,149,130, 0) 0,
+        #7151e7 100vmax,
+        #7151e7 calc(100vmax - 5px),
+        #7151e7 100vmax
+      ),
+      repeating-linear-gradient(270deg,
+        rgba(232,149,130, 0) 0,
+        #4377e0 100vmax,
+        #4377e0 calc(100vmax - 5px),
+        #4377e0 100vmax
+      );
+
+    background-color: #e89582;
+    background-size: 100% 100%;
 }
+
 
 .App {
   min-height: 100%;
@@ -51,9 +68,15 @@ body {
       color: $purplenavy;
       text-decoration: none;
     }
+
+    img {
+      width: 30px;
+      border-radius: 100px;
+    }
   }
 
   .Splash {
+    background-image: image('../images/cheers.jpg');
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -66,8 +89,8 @@ body {
       border: none;
       background-color: rgba(255,255,255,0.5);
       border-radius: 5px;
-      width: 100px;
-      height: 20px;
+      width: 160px;
+      height: 25px;
       box-shadow: 0 0 5px transparentize($topaz, 0.3);
     }
 
@@ -76,6 +99,35 @@ body {
       border: 1px dashed #333;
       border-radius: 100px;
       box-shadow: 0 0 20px transparentize($mango, 0.5);
+    }
+  }
+
+  .Home {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    img {
+      border-radius: 100px;
+    }
+  }
+
+  .BeerList {
+    height: 250px;
+    max-width: 500px;
+    overflow-y: auto;
+    box-shadow: 0 0 5px transparentize($topaz, 0.3);
+    margin: 0;
+
+    ul {
+      list-style: none;
+    }
+
+    img {
+      width: 100px;
+      border-radius: 100px;
+      padding: 3px;
+      border: 1px dashed #333;
     }
   }
 }
