--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -11,6 +11,7 @@ body {
   height: 100%;
   margin: 0;
   font-family: Raleway;
+  // background-color: $purplenavy;
   min-height: 100vh;
     background-image:
       repeating-linear-gradient(90deg,
@@ -43,9 +44,18 @@ body {
     flex: 1;
     font-size: 50px;
 
+
     a {
       text-decoration: none;
       color: #fff;
+      display: flex;
+      align-items: center;
+
+      img {
+        border: 1px dashed #333;
+        border-radius: 100px;
+        margin-right: 10px;
+      }
     }
   }
 
@@ -64,19 +74,29 @@ body {
     height: 50px;
     align-items: center;
 
+    .box {
+      display: flex;
+      align-items: center;
+
+      height: 100%;
+
+      flex: -1;
+      border-right: 1px solid black;
+    }
+
     a {
       color: $purplenavy;
       text-decoration: none;
+      font-size: 11px;
     }
 
     img {
-      width: 30px;
+      width: 25px;
       border-radius: 100px;
     }
   }
 
   .Splash {
-    background-image: image('../images/cheers.jpg');
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -107,10 +127,47 @@ body {
     flex-direction: column;
     align-items: center;
 
+    .homeBox {
+      padding: 8px;
+      // overflow-y: scroll;
+      width: 290px;
+      height: 340px;
+      // border: 1px solid black;
+      border-radius: 3px;
+      // background-color: rgba(255,255,255,0.5);
+      box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.70);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      // font-family: Gotham;
+
+      span {
+        text-align: center;
+        font-weight: lighter;
+      }
+
+      a {
+        margin-top: 10px;
+        text-decoration: none;
+        font-size: 12px;
+      }
+    }
+
     img {
       border-radius: 100px;
     }
+
   }
+
+  .Add {
+    input {
+      width: 200px;
+      height: 25px;
+      border: none;
+      box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+    }
+  }
+
 
   .BeerList {
     height: 250px;
