--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -31,7 +31,6 @@ body {
     background-size: 100% 100%;
 }
 
-
 .App {
   min-height: 100%;
   display: flex;
@@ -68,7 +67,7 @@ body {
     display: flex;
     justify-content: space-around;
     width: 100%;
-    background-color: rgba(255,255,255,0.5);
+    background-color: transparentize(#fff, 0.5);
     position: absolute;
     bottom: 0;
     height: 50px;
@@ -132,10 +131,10 @@ body {
       // overflow-y: scroll;
       width: 290px;
       height: 340px;
-      background: #444;
-      background: rgba(0,0,0,.2);
-      border-radius: 10px;
-      box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
+      // background: #444;
+      // background: rgba(0,0,0,.2);
+      // border-radius: 10px;
+      // box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -154,7 +153,7 @@ body {
     }
 
     img {
-      border-radius: 100px;
+      // border-radius: 100px;
     }
 
   }
@@ -273,10 +272,10 @@ overflow: visible;
     max-width: 500px;
     overflow-y: auto;
     margin: 0;
-    background: #444;
-    background: rgba(0,0,0,.2);
+    // background: #444;
+    // background: rgba(0,0,0,.2);
     border-radius: 10px;
-    box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
+    // box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
 
     ul {
       list-style: none;
