--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -11,24 +11,28 @@ body {
   height: 100%;
   margin: 0;
   font-family: Raleway;
-  // background-color: $purplenavy;
-  min-height: 100vh;
-    background-image:
-      repeating-linear-gradient(90deg,
-        rgba(232,149,130, 0) 0,
-        #7151e7 100vmax,
-        #7151e7 calc(100vmax - 5px),
-        #7151e7 100vmax
-      ),
-      repeating-linear-gradient(270deg,
-        rgba(232,149,130, 0) 0,
-        #4377e0 100vmax,
-        #4377e0 calc(100vmax - 5px),
-        #4377e0 100vmax
-      );
-
-    background-color: #e89582;
-    background-size: 100% 100%;
+  background: linear-gradient(
+      180deg,
+      #7151e7,
+      lighten(#4377e0, 10%)
+    );
+  // min-height: 100vh;
+  //   background-image:
+  //     repeating-linear-gradient(90deg,
+  //       rgba(232,149,130, 0) 0,
+  //       #7151e7 100vmax,
+  //       #7151e7 calc(100vmax - 5px),
+  //       #7151e7 100vmax
+  //     ),
+  //     repeating-linear-gradient(270deg,
+  //       rgba(232,149,130, 0) 0,
+  //       #4377e0 100vmax,
+  //       #4377e0 calc(100vmax - 5px),
+  //       #4377e0 100vmax
+  //     );
+  //
+  //   background-color: #e89582;
+  //   background-size: 100% 100%;
 }
 
 .App {
@@ -178,6 +182,7 @@ body {
   .Tabs, .BeerList {
      box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
      width: 300px;
+     background-color: lighten($topaz, 1%);
   }
 
   .Add {
@@ -317,6 +322,10 @@ overflow: visible;
       border-radius: 100px;
       padding: 3px;
       border: 1px dashed #333;
+    }
+
+    .carousel {
+      height: 900px;
     }
   }
 }
