--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -18,7 +18,8 @@ $mango: #ff8c42;
   height: 100%;
 
   body,
-  #root {
-    min-height: 100%;
+  #root,
+  #root > div {
+    min-height: 100vh;
   }
 }
