--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -1,4 +1,5 @@
 @import 'utility';
+@import 'add';
 
 $base-text-size: 16px;
 $base-font-family: sans-serif;
@@ -44,7 +45,7 @@ body {
   h1 {
     font-family: Shrikhand;
     color: #fff;
-    flex: 1;
+    // flex: 1;
     font-size: 50px;
 
 
@@ -63,11 +64,10 @@ body {
   }
 
   main {
-    flex: 1;
+
   }
 
   .Navbar {
-    flex: 1;
     display: flex;
     justify-content: space-around;
     width: 100%;
@@ -185,114 +185,25 @@ body {
      background-color: lighten($topaz, 1%);
   }
 
-  .Add {
-    margin-top: 20px;
+
+
+  .Tabs {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    align-items: stretch;
+    .slider {
+      flex: 1;
+    }
+
+  }
+  .beerSlide {
+    height: 300px;
+    display: flex;
+    justify-content: center;
     align-items: center;
-
-    span {
-      font-size: 11px;
-    }
-
-    .form-wrapper {
-      margin: 10px;
-    width: 280px;
-    height: 40px;
-    padding: 15px;
-    background: #444;
-    background: rgba(0,0,0,.2);
-    border-radius: 10px;
-    box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
-    }
-
-    .form-wrapper input {
-    width: 170px;
-    height: 20px;
-    padding: 10px 5px;
-    float: left;
-    font-family: Raleway;
-    border: 0;
-    background: #eee;
-    border-radius: 3px 0 0 3px;
-    }
-
-    .form-wrapper input:focus {
-    outline: 0;
-    background: #fff;
-    -moz-box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
-    -webkit-box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
-    box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
-    }
-
-  .form-wrapper input::-webkit-input-placeholder {
-   color: #999;
-   font-weight: normal;
-   font-style: italic;
+    flex-direction: column;
   }
-
-.form-wrapper input:-moz-placeholder {
-    color: #999;
-    font-weight: normal;
-    font-style: italic;
-}
-
-.form-wrapper input:-ms-input-placeholder {
-    color: #999;
-    font-weight: normal;
-    font-style: italic;
-}
-
-.form-wrapper button {
-overflow: visible;
-    position: relative;
-    float: right;
-    border: 0;
-    padding: 0;
-    cursor: pointer;
-    height: 40px;
-    width: 100px;
-    font-family: Raleway;
-    color: #fff;
-    text-transform: uppercase;
-    background: #d83c3c;
-    border-radius: 0 3px 3px 0;
-    text-shadow: 0 -1px 0 rgba(0, 0 ,0, .3);
-}
-
-.form-wrapper button:hover{
-    background: #e54040;
-}
-
-.form-wrapper button:active,
-.form-wrapper button:focus{
-    background: #c42f2f;
-}
-
-.form-wrapper button:before {
-    content: '';
-    position: absolute;
-    border-width: 8px 8px 8px 0;
-    border-style: solid solid solid none;
-    border-color: transparent #d83c3c transparent;
-    top: 12px;
-    left: -6px;
-}
-
-.form-wrapper button:hover:before{
-    border-right-color: #e54040;
-}
-
-.form-wrapper button:focus:before{
-    border-right-color: #c42f2f;
-}
-
-.form-wrapper button::-moz-focus-inner {
-    border: 0;
-    padding: 0;
-}
-  }
-
 
   .BeerList {
     height: 350px;
@@ -328,22 +239,4 @@ overflow: visible;
       height: 900px;
     }
   }
-}
-
-.Tabs {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: stretch;
-  .slider {
-    flex: 1;
-  }
-}
-
-.beerSlide {
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
 }
