--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -37,7 +37,7 @@ body {
 }
 
 .App {
-  min-height: 100%;
+  // min-height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -61,31 +61,23 @@ body {
         margin-right: 10px;
       }
     }
+
   }
-
   main {
-
+    margin-bottom: 50px;
   }
 
   .Navbar {
+    margin-top: 20px;
     display: flex;
+    position: fixed;
+    bottom: 0;
+    // flex: 1;
     justify-content: space-around;
     width: 100%;
-    background-color: transparentize(#fff, 0.5);
-    position: absolute;
-    bottom: 0;
-    height: 50px;
+    background-color: #fff;
+    height: 40px;
     align-items: center;
-
-    .box {
-      display: flex;
-      align-items: center;
-
-      height: 100%;
-
-      flex: -1;
-      border-right: 1px solid black;
-    }
 
     a {
       color: $purplenavy;
@@ -192,17 +184,31 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: stretch;
+
+    span {
+      font-family: Shrikhand;
+      font-size: 30px;
+      color: #333;
+      text-align: center;
+      margin-top: 20px;
+      border-bottom: 1px dashed #fff;
+    }
+
+    .slider-decorator-2 {
+      margin-bottom: 20px;
+    }
+
     .slider {
       flex: 1;
     }
-
-  }
-  .beerSlide {
-    height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    .beerSlide {
+      height: 200px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      margin-top: 20px;
+    }
   }
 
   .BeerList {
@@ -239,4 +245,18 @@ body {
       height: 900px;
     }
   }
+
+.Favorites {
+  span {
+    font-family: Shrikhand;
+    font-size: 30px;
+    color: #333;
+    text-align: center;
+    margin-top: 20px;
+    border-bottom: 1px dashed #fff;
+  }
+}
+
+
+
 }
