--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -75,7 +75,7 @@ body {
     // flex: 1;
     justify-content: space-around;
     width: 100%;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.6);
     height: 40px;
     align-items: center;
 
@@ -194,13 +194,17 @@ body {
       border-bottom: 1px dashed #fff;
     }
 
+    .slider {
+      flex: 1;
+
+      .slider-frame {
+        overflow: visible !important;
+      }
+    }
     .slider-decorator-2 {
       margin-bottom: 20px;
     }
 
-    .slider {
-      flex: 1;
-    }
     .beerSlide {
       height: 200px;
       display: flex;
@@ -256,7 +260,6 @@ body {
     border-bottom: 1px dashed #fff;
   }
 }
-
 
 
 }
