fixed tabs component

--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -195,7 +195,7 @@ body {
       color: #333;
       text-align: center;
       margin-top: 20px;
-      border-bottom: 1px dashed #fff;
+      border-bottom: 1px dashed #333;
     }
 
     .slider {
@@ -294,17 +294,6 @@ body {
       height: 900px;
     }
   }
-
-.Favorites {
-  span {
-    font-family: Shrikhand;
-    font-size: 30px;
-    color: #333;
-    text-align: center;
-    margin-top: 20px;
-    border-bottom: 1px dashed #fff;
-  }
-}
 
 
 }
