--- a/src/styles/tabs.scss
+++ b/src/styles/tabs.scss
@@ -2,11 +2,14 @@
   display: flex;
   align-items: center;
   border-bottom: 1px solid #333;
-  box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.1);
   // margin: 10px;
-  padding-top: 20px;
-  padding-bottom: 30px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   justify-content: space-between;
+  height: 340px;
+  overflow: hidden;
+
 
   .name {
     text-align: center;
